--- a/Chap8_TheIO.ipynb
+++ b/Chap8_TheIO.ipynb
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "istream& readStream(istream& is)\n",
     "{\n",
     "    char c;\n",
-    "    while(is.get(c))\n",
+    "    while(is.get(c) && c!= 's')\n",
     "    {\n",
     "        cout<<c;\n",
     "    }\n",
@@ -31,18 +31,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "hello\n",
+      "bye\n",
+      "enter\n",
+      "enter\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "@0x7fb901bfdc80"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "readStream(cin)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "istereamistream\u0000istream\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "@0x7fb901bfdb60"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cout << \"isteream\"<<flush; //adds a new line and then flushes the buffer.\n",
     "cout<<\"istream\"<<ends; // writes hi and a null and flushes the buffer; adds no data.\n",
@@ -152,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,6 +233,75 @@
     "    people.push_back(info);\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "input_line_62:2:16: error: no matching constructor for initialization of 'std::istringstream' (aka 'basic_istringstream<char>')\n",
+      " istringstream record(cin);\n",
+      "               ^      ~~~\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/sstream:587:7: note: candidate constructor not viable: no known conversion from 'std::istream' (aka 'basic_istream<char>') to 'ios_base::openmode' (aka 'std::_Ios_Openmode') for 1st argument\n",
+      "      basic_istringstream(ios_base::openmode __mode)\n",
+      "      ^\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/sstream:605:7: note: candidate constructor not viable: no known conversion from 'std::istream' (aka 'basic_istream<char>') to 'const std::__cxx11::basic_istringstream<char, std::char_traits<char>, std::allocator<char> >::__string_type' (aka 'const basic_string<char, std::char_traits<char>, std::allocator<char> >') for 1st argument\n",
+      "      basic_istringstream(const __string_type& __str,\n",
+      "      ^\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/sstream:620:7: note: candidate constructor not viable: no known conversion from 'std::istream' (aka 'basic_istream<char>') to 'const std::__cxx11::basic_istringstream<char>' for 1st argument\n",
+      "      basic_istringstream(const basic_istringstream&) = delete;\n",
+      "      ^\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/sstream:622:7: note: candidate constructor not viable: no known conversion from 'std::istream' (aka 'basic_istream<char>') to 'std::__cxx11::basic_istringstream<char>' for 1st argument\n",
+      "      basic_istringstream(basic_istringstream&& __rhs)\n",
+      "      ^\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/sstream:570:7: note: candidate constructor not viable: requires 0 arguments, but 1 was provided\n",
+      "      basic_istringstream()\n",
+      "      ^\n"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
+   "source": [
+    "istringstream record(cin);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "@0x7fb908ad3100"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "record"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
