--- a/Chap6.ipynb
+++ b/Chap6.ipynb
@@ -3,6 +3,37 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "371d40b4-0903-47b9-b33e-8fd6af8cbd61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected Jupyter core packages...\n",
+      "IPython          : 8.6.0\n",
+      "ipykernel        : 6.17.0\n",
+      "ipywidgets       : not installed\n",
+      "jupyter_client   : 7.4.4\n",
+      "jupyter_core     : 4.11.2\n",
+      "jupyter_server   : 1.21.0\n",
+      "jupyterlab       : 3.5.0\n",
+      "nbclient         : 0.7.0\n",
+      "nbconvert        : 7.2.3\n",
+      "nbformat         : 5.7.0\n",
+      "notebook         : 6.5.2\n",
+      "qtconsole        : not installed\n",
+      "traitlets        : 5.5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter --version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "cda1053f-3404-4d05-aba5-219013ba7f37",
    "metadata": {},
    "outputs": [],
@@ -93,7 +124,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "569ee39b-b687-4d7d-aaa9-41272e76dd2b",
    "metadata": {},
@@ -204,7 +234,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9e021ab7",
    "metadata": {},
@@ -292,7 +321,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0208913c",
    "metadata": {},
@@ -337,7 +365,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "1b5705a5",
    "metadata": {},
@@ -473,7 +500,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b98662ac-b835-4cb2-96f7-ef27dddaf4b3",
    "metadata": {},
@@ -786,7 +812,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f445bafc-663f-4798-bbbe-6bfe7a5d5aec",
    "metadata": {},
@@ -802,7 +827,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "aba32e90-bad5-4d13-8cec-be93ecdc6933",
    "metadata": {},
@@ -906,7 +930,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e67334e3-508a-4c29-8739-3d3e18c0bbbb",
    "metadata": {},
@@ -1127,7 +1150,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d072bca2-4d23-4279-8223-1b84a4b526c4",
    "metadata": {},
@@ -1174,7 +1196,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ea9b81c3-d936-4138-bf79-4050222af4a3",
    "metadata": {},
@@ -1195,7 +1216,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9810cf35-1fb2-4e11-ab8b-463755db05c1",
    "metadata": {},
@@ -1668,7 +1688,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "55968bec-4a36-47f3-8a46-de82d5073db5",
    "metadata": {},
@@ -1867,7 +1886,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e5b73774-9dd6-4709-89a7-016e893ee30e",
    "metadata": {},
@@ -1907,7 +1925,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d5f9f9fa",
    "metadata": {},
@@ -2010,7 +2027,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "950ff589",
    "metadata": {},
@@ -2029,7 +2045,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e888fe3f",
    "metadata": {},
@@ -2134,7 +2149,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9e1945c2",
    "metadata": {},
@@ -2395,7 +2409,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "416f7b0d",
    "metadata": {},
@@ -2416,7 +2429,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ab29403a",
    "metadata": {},
@@ -2453,7 +2465,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9b57f620",
    "metadata": {},
@@ -2474,7 +2485,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d8fcb907",
    "metadata": {},
@@ -2641,7 +2651,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "515dc4aa",
    "metadata": {},
@@ -2672,7 +2681,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "70b78c54",
    "metadata": {},
@@ -2718,7 +2726,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "cf3c8429",
    "metadata": {},
@@ -2765,7 +2772,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3006b676",
    "metadata": {},
@@ -2831,7 +2837,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "1d231096",
    "metadata": {},
@@ -2860,7 +2865,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "cb49912b",
    "metadata": {},
@@ -2971,7 +2975,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e75e6058",
    "metadata": {},
@@ -3049,7 +3052,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "1f90f79f",
    "metadata": {},
@@ -3068,7 +3070,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8ba26a65",
    "metadata": {},
@@ -3091,7 +3092,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5e3097a3",
    "metadata": {},
@@ -3156,7 +3156,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d8b64e63",
    "metadata": {},
@@ -3177,7 +3176,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6e86a367",
    "metadata": {},
@@ -3186,7 +3184,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7ed5aff8",
    "metadata": {},
@@ -3323,9 +3320,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "C++14",
+   "display_name": "C++14 [conda env:xeus-cling]",
    "language": "C++14",
-   "name": "xcpp14"
+   "name": "conda-env-xeus-cling-xcpp14"
   },
   "language_info": {
    "codemirror_mode": "text/x-c++src",
