--- a/Chap8_TheIO.ipynb
+++ b/Chap8_TheIO.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#include <iostream>\n",
     "#include <fstream>\n",
+    "#include <vector>\n",
+    "#include <string>\n",
     "using namespace std;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,58 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello\n",
-      "hello\n",
-      "bye\n",
-      "enter\n",
-      "enter\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "@0x7fb901bfdc80"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "readStream(cin)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "istereamistream\u0000istream\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "@0x7fb901bfdb60"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cout << \"isteream\"<<flush; //adds a new line and then flushes the buffer.\n",
     "cout<<\"istream\"<<ends; // writes hi and a null and flushes the buffer; adds no data.\n",
@@ -164,27 +126,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "input_line_26:2:42: error: function definition is not allowed here\n",
-      " vector<string> readFile(string filename){\n",
-      "                                         ^\n"
-     ]
-    },
-    {
-     "ename": "Interpreter Error",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "Interpreter Error: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n"
@@ -192,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,52 +158,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "string line, word;\n",
-    "vector<PersonInfo> people;\n",
-    "\n",
-    "while (getline(cin, line) && line != \"stop\"){\n",
-    "\n",
-    "    PersonInfo info;\n",
-    "    istringstream record(line);\n",
-    "    record >> info.name;\n",
-    "    while (record >> word)\n",
-    "    {\n",
-    "        info.phones.push_back(word);\n",
-    "    }\n",
-    "    people.push_back(info);\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "input_line_62:2:16: error: no matching constructor for initialization of 'std::istringstream' (aka 'basic_istringstream<char>')\n",
-      " istringstream record(cin);\n",
-      "               ^      ~~~\n",
-      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/sstream:587:7: note: candidate constructor not viable: no known conversion from 'std::istream' (aka 'basic_istream<char>') to 'ios_base::openmode' (aka 'std::_Ios_Openmode') for 1st argument\n",
+      "input_line_25:6:23: error: no matching constructor for initialization of 'std::istringstream' (aka 'basic_istringstream<char>')\n",
+      "        istringstream record(line);\n",
+      "                      ^      ~~~~\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/sstream:587:7: note: candidate constructor not viable: no known conversion from 'std::string' (aka 'basic_string<char>') to 'ios_base::openmode' (aka 'std::_Ios_Openmode') for 1st argument\n",
       "      basic_istringstream(ios_base::openmode __mode)\n",
       "      ^\n",
-      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/sstream:605:7: note: candidate constructor not viable: no known conversion from 'std::istream' (aka 'basic_istream<char>') to 'const std::__cxx11::basic_istringstream<char, std::char_traits<char>, std::allocator<char> >::__string_type' (aka 'const basic_string<char, std::char_traits<char>, std::allocator<char> >') for 1st argument\n",
-      "      basic_istringstream(const __string_type& __str,\n",
-      "      ^\n",
-      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/sstream:620:7: note: candidate constructor not viable: no known conversion from 'std::istream' (aka 'basic_istream<char>') to 'const std::__cxx11::basic_istringstream<char>' for 1st argument\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/sstream:620:7: note: candidate constructor not viable: no known conversion from 'std::string' (aka 'basic_string<char>') to 'const std::__cxx11::basic_istringstream<char>' for 1st argument\n",
       "      basic_istringstream(const basic_istringstream&) = delete;\n",
       "      ^\n",
-      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/sstream:622:7: note: candidate constructor not viable: no known conversion from 'std::istream' (aka 'basic_istream<char>') to 'std::__cxx11::basic_istringstream<char>' for 1st argument\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/sstream:622:7: note: candidate constructor not viable: no known conversion from 'std::string' (aka 'basic_string<char>') to 'std::__cxx11::basic_istringstream<char>' for 1st argument\n",
       "      basic_istringstream(basic_istringstream&& __rhs)\n",
       "      ^\n",
       "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/sstream:570:7: note: candidate constructor not viable: requires 0 arguments, but 1 was provided\n",
       "      basic_istringstream()\n",
+      "      ^\n",
+      "In file included from input_line_5:1:\n",
+      "In file included from /home/susearc/miniconda3/envs/xeus-cling/include/xeus/xinterpreter.hpp:14:\n",
+      "In file included from /home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/string:53:\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/bits/basic_string.h:3925:45: error: no member named 'widen' in 'std::basic_istream<char>'\n",
+      "    { return std::getline(__is, __str, __is.widen('\\n')); }\n",
+      "                                       ~~~~ ^\n",
+      "input_line_25:4:8: note: in instantiation of function template specialization 'std::getline<char, std::char_traits<char>, std::allocator<char> >' requested here\n",
+      "while (getline(cin, line)){\n",
+      "       ^\n",
+      "input_line_24:1:8: error: no matching constructor for initialization of 'vector<std::string>' (aka 'vector<basic_string<char> >')\n",
+      "struct PersonInfo{\n",
+      "       ^~~~~~~~~~\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/bits/new_allocator.h:175:23: note: in implicit copy constructor for '__cling_N513::PersonInfo' first required here\n",
+      "        { ::new((void *)__p) _Up(std::forward<_Args>(__args)...); }\n",
+      "                             ^\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/bits/alloc_traits.h:516:8: note: in instantiation of function template specialization 'std::__new_allocator<__cling_N513::PersonInfo>::construct<__cling_N513::PersonInfo, const __cling_N513::PersonInfo &>' requested here\n",
+      "          __a.construct(__p, std::forward<_Args>(__args)...);\n",
+      "              ^\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/bits/stl_vector.h:1281:21: note: in instantiation of function template specialization 'std::allocator_traits<std::allocator<__cling_N513::PersonInfo> >::construct<__cling_N513::PersonInfo, const __cling_N513::PersonInfo &>' requested here\n",
+      "            _Alloc_traits::construct(this->_M_impl, this->_M_impl._M_finish,\n",
+      "                           ^\n",
+      "input_line_25:12:16: note: in instantiation of member function 'std::vector<__cling_N513::PersonInfo, std::allocator<__cling_N513::PersonInfo> >::push_back' requested here\n",
+      "        people.push_back(info);\n",
+      "               ^\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/bits/stl_vector.h:537:7: note: candidate constructor not viable: no known conversion from 'const vector<std::string>' (aka 'const vector<basic_string<char> >') to 'const std::vector<std::__cxx11::basic_string<char>, std::allocator<std::__cxx11::basic_string<char> > >::allocator_type' (aka 'const std::allocator<std::__cxx11::basic_string<char> >') for 1st argument\n",
+      "      vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT\n",
+      "      ^\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/bits/stl_vector.h:551:7: note: candidate constructor not viable: no known conversion from 'const vector<std::string>' (aka 'const vector<basic_string<char> >') to 'std::vector::size_type' (aka 'unsigned long') for 1st argument\n",
+      "      vector(size_type __n, const allocator_type& __a = allocator_type())\n",
+      "      ^\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/bits/stl_vector.h:615:7: note: candidate constructor not viable: 1st argument ('const vector<std::string>' (aka 'const vector<basic_string<char> >')) would lose const qualifier\n",
+      "      vector(vector&&) noexcept = default;\n",
+      "      ^\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/bits/stl_vector.h:673:7: note: candidate constructor not viable: no known conversion from 'const vector<std::string>' (aka 'const vector<basic_string<char> >') to 'initializer_list<std::vector<std::__cxx11::basic_string<char>, std::allocator<std::__cxx11::basic_string<char> > >::value_type>' (aka 'initializer_list<std::__cxx11::basic_string<char> >') for 1st argument\n",
+      "      vector(initializer_list<value_type> __l,\n",
+      "      ^\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/bits/stl_vector.h:702:2: note: candidate constructor template not viable: requires at least 2 arguments, but 1 was provided\n",
+      "        vector(_InputIterator __first, _InputIterator __last,\n",
+      "        ^\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/bits/stl_vector.h:526:7: note: candidate constructor not viable: requires 0 arguments, but 1 was provided\n",
+      "      vector() = default;\n",
+      "      ^\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/bits/stl_vector.h:619:7: note: candidate constructor not viable: requires 2 arguments, but 1 was provided\n",
+      "      vector(const vector& __x, const __type_identity_t<allocator_type>& __a)\n",
+      "      ^\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/bits/stl_vector.h:654:7: note: candidate constructor not viable: requires 2 arguments, but 1 was provided\n",
+      "      vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)\n",
+      "      ^\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/bits/stl_vector.h:564:7: note: candidate constructor not viable: requires at least 2 arguments, but 1 was provided\n",
+      "      vector(size_type __n, const value_type& __value,\n",
+      "      ^\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/bits/stl_vector.h:630:7: note: candidate constructor not viable: requires 3 arguments, but 1 was provided\n",
+      "      vector(vector&& __rv, const allocator_type& __m, true_type) noexcept\n",
+      "      ^\n",
+      "/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/bits/stl_vector.h:635:7: note: candidate constructor not viable: requires 3 arguments, but 1 was provided\n",
+      "      vector(vector&& __rv, const allocator_type& __m, false_type)\n",
       "      ^\n"
      ]
     },
@@ -273,27 +249,78 @@
     }
    ],
    "source": [
+    "string line, word;\n",
+    "vector<PersonInfo> people;\n",
+    "\n",
+    "while (getline(cin, line)){\n",
+    "\n",
+    "        PersonInfo info;\n",
+    "        istringstream record(line);\n",
+    "        record >> info.name;\n",
+    "        while (record >> word)\n",
+    "        {\n",
+    "            info.phones.push_back(word);\n",
+    "        }\n",
+    "        people.push_back(info);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "istringstream record(cin);\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "@0x7fb908ad3100"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "record"
+    "//inclass initializer\n",
+    "\n",
+    "struct PersonInfo {\n",
+    "    std::string name = \"ark pand\";\n",
+    "    vector <string> phn = {\"266366\",\"8866778989\"};\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using ostringstreams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for (const auto &entry : people) {\n",
+    "// for each entry in people\n",
+    "ostringstream formatted, badNums; // objects created on each loop\n",
+    "for (const auto &nums : entry.phones) { // for each number\n",
+    "if (!valid(nums)) {\n",
+    "badNums << \" \" << nums; // string in badNums\n",
+    "} else\n",
+    "// ‘‘writes’’ to formatted’s string\n",
+    "formatted << \" \" << format(nums);\n",
+    "}\n",
+    "if (badNums.str().empty())\n",
+    "// there were no bad numbers\n",
+    "os << entry.name << \" \"\n",
+    "// print the name\n",
+    "<< formatted.str() << endl; // and reformatted numbers\n",
+    "else\n",
+    "// otherwise, print the name and bad numbers\n",
+    "cerr << \"input error: \" << entry.name\n",
+    "<< \" invalid number(s) \" << badNums.str() << endl;\n",
+    "}"
    ]
   },
   {
