--- a/Chap8_TheIO.ipynb
+++ b/Chap8_TheIO.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "#include <iostream>\n",
@@ -16,7 +20,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "istream& readStream(istream& is)\n",
@@ -34,7 +42,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "readStream(cin)"
@@ -43,7 +55,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "cout << \"isteream\"<<flush; //adds a new line and then flushes the buffer.\n",
@@ -54,7 +70,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "cout<<unitbuf"
@@ -63,7 +83,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "cout<<\"hello\""
@@ -72,7 +96,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "cout.clear()"
@@ -81,7 +109,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "cout<<\"hello\""
@@ -90,7 +122,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "// tying a stream\n",
@@ -116,7 +152,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "ifstream //read from a file\n",
@@ -127,7 +167,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -137,7 +181,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "string filename = \"demo.txt\""
@@ -146,7 +194,11 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "#include <sstream>\n",
@@ -159,7 +211,11 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -268,7 +324,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "istringstream record(cin);\n"
@@ -277,7 +337,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "//inclass initializer\n",
@@ -298,7 +362,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "for (const auto &entry : people) {\n",
@@ -326,7 +394,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": []
   }
@@ -341,7 +413,7 @@
    "codemirror_mode": "text/x-c++src",
    "file_extension": ".cpp",
    "mimetype": "text/x-c++src",
-   "name": "c++",
+   "name": "C++14",
    "version": "14"
   },
   "orig_nbformat": 4
